# vuren

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
docs/: 2023-01-05-debug-descriptor-info-vector.md  2023-01-08-render-pass-pipeline-abstraction-improvement.md  2023-01-13-debug-acceleration-structure.md
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Common.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp  VulkanContext.cpp  VulkanContext.hpp  main.cpp
src/CommonShaders/: Final.frag.glsl  HitData.h  HitDataRt.h
src/RenderPasses/AccumulationPass/: Accum.frag.glsl  Accum.vert.glsl  AccumCommon.h  AccumulationPass.cpp  AccumulationPass.hpp
src/RenderPasses/AmbientOcclusionPass/: AO.rchit.glsl  AO.rgen.glsl  AO.rmiss.glsl  AmbientOcclusionPass.cpp  AmbientOcclusionPass.hpp  AoCommon.h
src/RenderPasses/GBufferPass/: GBufferCommon.h  RasterGBuffer.frag.glsl  RasterGBuffer.vert.glsl  RasterGBufferPass.cpp  RasterGBufferPass.hpp  RayTracedGBuffer.rchit.glsl  RayTracedGBuffer.rgen.glsl  RayTracedGBuffer.rmiss.glsl  RayTracedGBufferPass.cpp  RayTracedGBufferPass.hpp
src/RenderPasses/PathTracingPass/: PathTracingPass.cpp  PathTracingPass.hpp  PtCommon.h  pt.rchit.glsl  pt.rgen.glsl  pt.rmiss.glsl
src/shaders/: HitCommon.h  HybridAO.h  HybridAO.rchit.glsl  HybridAO.rgen.glsl  HybridAO.rmiss.glsl  Random.h  RasterGBuffer.frag.glsl  RasterGBuffer.vert.glsl  RayTracedGBuffer.rchit.glsl  RayTracedGBuffer.rgen.glsl  RayTracedGBuffer.rmiss.glsl  RayTracingCommon.h  ShaderCommon.glsl  ShaderCommon.h  final.frag.glsl  final.vert.glsl  rt.rchit.glsl  rt.rgen.glsl  rt.rmiss.glsl  shader.frag.glsl  shader.vert.glsl
